syntactic_analyzer/y.output
State 8 conflicts: 1 shift/reduce
State 9 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 11 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: PROGRAM IDENT ';' corpo '.'
    2         | error IDENT ';' corpo '.'
    3         | PROGRAM error ';' corpo '.'
    4         | PROGRAM IDENT error corpo '.'
    5         | PROGRAM IDENT ';' corpo error

    6 corpo: dc _BEGIN comandos END
    7      | dc error comandos END
    8      | dc _BEGIN comandos error

    9 dc: dc_c dc_v dc_p
   10   | error dc_v dc_p
   11   | dc_c error dc_p

   12 dc_c: CONST IDENT '=' numero ';' dc_c
   13     | %empty
   14     | CONST error '=' numero ';' dc_c
   15     | CONST IDENT error numero ';' dc_c
   16     | CONST IDENT '=' error ';' dc_c
   17     | CONST IDENT '=' numero error dc_c

   18 dc_v: VAR variaveis ':' tipo_var ';' dc_v
   19     | %empty
   20     | VAR variaveis error tipo_var ';' dc_v
   21     | VAR variaveis ':' tipo_var error dc_v

   22 tipo_var: REAL
   23         | INTEGER
   24         | error

   25 variaveis: IDENT mais_var

   26 mais_var: ',' variaveis
   27         | %empty

   28 dc_p: PROCEDURE IDENT parametros ';' corpo_p dc_p
   29     | %empty

   30 parametros: '(' lista_par ')'
   31           | %empty

   32 lista_par: variaveis ':' tipo_var mais_par

   33 mais_par: ';' lista_par
   34         | %empty

   35 corpo_p: dc_loc _BEGIN comandos END ';'

   36 dc_loc: dc_v

   37 lista_arg: '(' argumentos ')'
   38          | %empty

   39 argumentos: IDENT mais_ident

   40 mais_ident: ';' argumentos
   41           | %empty

   42 pfalsa: ELSE cmd
   43       | %empty

   44 comandos: cmd ';' comandos
   45         | %empty

   46 cmd: READ '(' variaveis ')'
   47    | WRITE '(' variaveis ')'
   48    | WHILE '(' condicao ')' DO cmd
   49    | IF condicao THEN cmd pfalsa
   50    | IDENT SYMB_ASSIGN expressao
   51    | IDENT lista_arg
   52    | _BEGIN comandos END
   53    | FOR IDENT SYMB_ASSIGN expressao TO expressao DO cmd

   54 condicao: expressao relacao expressao

   55 relacao: '='
   56        | OP_DIF
   57        | OP_GE
   58        | OP_LE
   59        | '>'
   60        | '<'

   61 expressao: termo outros_termos

   62 op_un: '+'
   63      | '-'
   64      | %empty

   65 outros_termos: op_ad termo outros_termos
   66              | %empty

   67 op_ad: '+'
   68      | '-'

   69 termo: op_un fator mais_fatores

   70 mais_fatores: op_mul fator mais_fatores
   71             | %empty

   72 op_mul: '*'
   73       | '/'

   74 fator: IDENT
   75      | numero
   76      | '(' expressao ')'

   77 numero: NUMERO_INT
   78       | NUMERO_REAL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 30 37 46 47 48 76
')' (41) 30 37 46 47 48 76
'*' (42) 72
'+' (43) 62 67
',' (44) 26
'-' (45) 63 68
'.' (46) 1 2 3 4
'/' (47) 73
':' (58) 18 21 32
';' (59) 1 2 3 5 12 14 15 16 18 20 28 33 35 40 44
'<' (60) 60
'=' (61) 12 14 16 17 55
'>' (62) 59
error (256) 2 3 4 5 7 8 10 11 14 15 16 17 20 21 24
CONST (258) 12 14 15 16 17
DO (259) 48 53
ELSE (260) 42
END (261) 6 7 35 52
FOR (262) 53
IDENT (263) 1 2 4 5 12 15 16 17 25 28 39 50 51 53 74
IF (264) 49
INTEGER (265) 23
NUMERO_INT (266) 77
NUMERO_REAL (267) 78
OP_DIF (268) 56
OP_GE (269) 57
OP_LE (270) 58
PROCEDURE (271) 28
PROGRAM (272) 1 3 4 5
READ (273) 46
REAL (274) 22
SYMB_ASSIGN (275) 50 53
THEN (276) 49
TO (277) 53
VAR (278) 18 20 21
WHILE (279) 48
WRITE (280) 47
_BEGIN (281) 6 8 35 52


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
programa (41)
    on left: 1 2 3 4 5, on right: 0
corpo (42)
    on left: 6 7 8, on right: 1 2 3 4 5
dc (43)
    on left: 9 10 11, on right: 6 7 8
dc_c (44)
    on left: 12 13 14 15 16 17, on right: 9 11 12 14 15 16 17
dc_v (45)
    on left: 18 19 20 21, on right: 9 10 18 20 21 36
tipo_var (46)
    on left: 22 23 24, on right: 18 20 21 32
variaveis (47)
    on left: 25, on right: 18 20 21 26 32 46 47
mais_var (48)
    on left: 26 27, on right: 25
dc_p (49)
    on left: 28 29, on right: 9 10 11 28
parametros (50)
    on left: 30 31, on right: 28
lista_par (51)
    on left: 32, on right: 30 33
mais_par (52)
    on left: 33 34, on right: 32
corpo_p (53)
    on left: 35, on right: 28
dc_loc (54)
    on left: 36, on right: 35
lista_arg (55)
    on left: 37 38, on right: 51
argumentos (56)
    on left: 39, on right: 37 40
mais_ident (57)
    on left: 40 41, on right: 39
pfalsa (58)
    on left: 42 43, on right: 49
comandos (59)
    on left: 44 45, on right: 6 7 8 35 44 52
cmd (60)
    on left: 46 47 48 49 50 51 52 53, on right: 42 44 48 49 53
condicao (61)
    on left: 54, on right: 48 49
relacao (62)
    on left: 55 56 57 58 59 60, on right: 54
expressao (63)
    on left: 61, on right: 50 53 54 76
op_un (64)
    on left: 62 63 64, on right: 69
outros_termos (65)
    on left: 65 66, on right: 61 65
op_ad (66)
    on left: 67 68, on right: 65
termo (67)
    on left: 69, on right: 61 65
mais_fatores (68)
    on left: 70 71, on right: 69 70
op_mul (69)
    on left: 72 73, on right: 70
fator (70)
    on left: 74 75 76, on right: 69 70
numero (71)
    on left: 77 78, on right: 12 14 15 17 75


State 0

    0 $accept: . programa $end

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    programa  go to state 3


State 1

    2 programa: error . IDENT ';' corpo '.'

    IDENT  shift, and go to state 4


State 2

    1 programa: PROGRAM . IDENT ';' corpo '.'
    3         | PROGRAM . error ';' corpo '.'
    4         | PROGRAM . IDENT error corpo '.'
    5         | PROGRAM . IDENT ';' corpo error

    error  shift, and go to state 5
    IDENT  shift, and go to state 6


State 3

    0 $accept: programa . $end

    $end  shift, and go to state 7


State 4

    2 programa: error IDENT . ';' corpo '.'

    ';'  shift, and go to state 8


State 5

    3 programa: PROGRAM error . ';' corpo '.'

    ';'  shift, and go to state 9


State 6

    1 programa: PROGRAM IDENT . ';' corpo '.'
    4         | PROGRAM IDENT . error corpo '.'
    5         | PROGRAM IDENT . ';' corpo error

    error  shift, and go to state 10
    ';'    shift, and go to state 11


State 7

    0 $accept: programa $end .

    $default  accept


State 8

    2 programa: error IDENT ';' . corpo '.'

    error  shift, and go to state 12
    CONST  shift, and go to state 13

    error      [reduce using rule 13 (dc_c)]
    PROCEDURE  reduce using rule 13 (dc_c)
    VAR        reduce using rule 13 (dc_c)
    _BEGIN     reduce using rule 13 (dc_c)

    corpo  go to state 14
    dc     go to state 15
    dc_c   go to state 16


State 9

    3 programa: PROGRAM error ';' . corpo '.'

    error  shift, and go to state 12
    CONST  shift, and go to state 13

    error      [reduce using rule 13 (dc_c)]
    PROCEDURE  reduce using rule 13 (dc_c)
    VAR        reduce using rule 13 (dc_c)
    _BEGIN     reduce using rule 13 (dc_c)

    corpo  go to state 17
    dc     go to state 15
    dc_c   go to state 16


State 10

    4 programa: PROGRAM IDENT error . corpo '.'

    error  shift, and go to state 12
    CONST  shift, and go to state 13

    error      [reduce using rule 13 (dc_c)]
    PROCEDURE  reduce using rule 13 (dc_c)
    VAR        reduce using rule 13 (dc_c)
    _BEGIN     reduce using rule 13 (dc_c)

    corpo  go to state 18
    dc     go to state 15
    dc_c   go to state 16


State 11

    1 programa: PROGRAM IDENT ';' . corpo '.'
    5         | PROGRAM IDENT ';' . corpo error

    error  shift, and go to state 12
    CONST  shift, and go to state 13

    error      [reduce using rule 13 (dc_c)]
    PROCEDURE  reduce using rule 13 (dc_c)
    VAR        reduce using rule 13 (dc_c)
    _BEGIN     reduce using rule 13 (dc_c)

    corpo  go to state 19
    dc     go to state 15
    dc_c   go to state 16


State 12

   10 dc: error . dc_v dc_p

    VAR  shift, and go to state 20

    $default  reduce using rule 19 (dc_v)

    dc_v  go to state 21


State 13

   12 dc_c: CONST . IDENT '=' numero ';' dc_c
   14     | CONST . error '=' numero ';' dc_c
   15     | CONST . IDENT error numero ';' dc_c
   16     | CONST . IDENT '=' error ';' dc_c
   17     | CONST . IDENT '=' numero error dc_c

    error  shift, and go to state 22
    IDENT  shift, and go to state 23


State 14

    2 programa: error IDENT ';' corpo . '.'

    '.'  shift, and go to state 24


State 15

    6 corpo: dc . _BEGIN comandos END
    7      | dc . error comandos END
    8      | dc . _BEGIN comandos error

    error   shift, and go to state 25
    _BEGIN  shift, and go to state 26


State 16

    9 dc: dc_c . dc_v dc_p
   11   | dc_c . error dc_p

    error  shift, and go to state 27
    VAR    shift, and go to state 20

    error      [reduce using rule 19 (dc_v)]
    PROCEDURE  reduce using rule 19 (dc_v)
    _BEGIN     reduce using rule 19 (dc_v)

    dc_v  go to state 28


State 17

    3 programa: PROGRAM error ';' corpo . '.'

    '.'  shift, and go to state 29


State 18

    4 programa: PROGRAM IDENT error corpo . '.'

    '.'  shift, and go to state 30


State 19

    1 programa: PROGRAM IDENT ';' corpo . '.'
    5         | PROGRAM IDENT ';' corpo . error

    error  shift, and go to state 31
    '.'    shift, and go to state 32


State 20

   18 dc_v: VAR . variaveis ':' tipo_var ';' dc_v
   20     | VAR . variaveis error tipo_var ';' dc_v
   21     | VAR . variaveis ':' tipo_var error dc_v

    IDENT  shift, and go to state 33

    variaveis  go to state 34


State 21

   10 dc: error dc_v . dc_p

    PROCEDURE  shift, and go to state 35

    $default  reduce using rule 29 (dc_p)

    dc_p  go to state 36


State 22

   14 dc_c: CONST error . '=' numero ';' dc_c

    '='  shift, and go to state 37


State 23

   12 dc_c: CONST IDENT . '=' numero ';' dc_c
   15     | CONST IDENT . error numero ';' dc_c
   16     | CONST IDENT . '=' error ';' dc_c
   17     | CONST IDENT . '=' numero error dc_c

    error  shift, and go to state 38
    '='    shift, and go to state 39


State 24

    2 programa: error IDENT ';' corpo '.' .

    $default  reduce using rule 2 (programa)


State 25

    7 corpo: dc error . comandos END

    FOR     shift, and go to state 40
    IDENT   shift, and go to state 41
    IF      shift, and go to state 42
    READ    shift, and go to state 43
    WHILE   shift, and go to state 44
    WRITE   shift, and go to state 45
    _BEGIN  shift, and go to state 46

    $default  reduce using rule 45 (comandos)

    comandos  go to state 47
    cmd       go to state 48


State 26

    6 corpo: dc _BEGIN . comandos END
    8      | dc _BEGIN . comandos error

    FOR     shift, and go to state 40
    IDENT   shift, and go to state 41
    IF      shift, and go to state 42
    READ    shift, and go to state 43
    WHILE   shift, and go to state 44
    WRITE   shift, and go to state 45
    _BEGIN  shift, and go to state 46

    $default  reduce using rule 45 (comandos)

    comandos  go to state 49
    cmd       go to state 48


State 27

   11 dc: dc_c error . dc_p

    PROCEDURE  shift, and go to state 35

    $default  reduce using rule 29 (dc_p)

    dc_p  go to state 50


State 28

    9 dc: dc_c dc_v . dc_p

    PROCEDURE  shift, and go to state 35

    $default  reduce using rule 29 (dc_p)

    dc_p  go to state 51


State 29

    3 programa: PROGRAM error ';' corpo '.' .

    $default  reduce using rule 3 (programa)


State 30

    4 programa: PROGRAM IDENT error corpo '.' .

    $default  reduce using rule 4 (programa)


State 31

    5 programa: PROGRAM IDENT ';' corpo error .

    $default  reduce using rule 5 (programa)


State 32

    1 programa: PROGRAM IDENT ';' corpo '.' .

    $default  reduce using rule 1 (programa)


State 33

   25 variaveis: IDENT . mais_var

    ','  shift, and go to state 52

    $default  reduce using rule 27 (mais_var)

    mais_var  go to state 53


State 34

   18 dc_v: VAR variaveis . ':' tipo_var ';' dc_v
   20     | VAR variaveis . error tipo_var ';' dc_v
   21     | VAR variaveis . ':' tipo_var error dc_v

    error  shift, and go to state 54
    ':'    shift, and go to state 55


State 35

   28 dc_p: PROCEDURE . IDENT parametros ';' corpo_p dc_p

    IDENT  shift, and go to state 56


State 36

   10 dc: error dc_v dc_p .

    $default  reduce using rule 10 (dc)


State 37

   14 dc_c: CONST error '=' . numero ';' dc_c

    NUMERO_INT   shift, and go to state 57
    NUMERO_REAL  shift, and go to state 58

    numero  go to state 59


State 38

   15 dc_c: CONST IDENT error . numero ';' dc_c

    NUMERO_INT   shift, and go to state 57
    NUMERO_REAL  shift, and go to state 58

    numero  go to state 60


State 39

   12 dc_c: CONST IDENT '=' . numero ';' dc_c
   16     | CONST IDENT '=' . error ';' dc_c
   17     | CONST IDENT '=' . numero error dc_c

    error        shift, and go to state 61
    NUMERO_INT   shift, and go to state 57
    NUMERO_REAL  shift, and go to state 58

    numero  go to state 62


State 40

   53 cmd: FOR . IDENT SYMB_ASSIGN expressao TO expressao DO cmd

    IDENT  shift, and go to state 63


State 41

   50 cmd: IDENT . SYMB_ASSIGN expressao
   51    | IDENT . lista_arg

    SYMB_ASSIGN  shift, and go to state 64
    '('          shift, and go to state 65

    $default  reduce using rule 38 (lista_arg)

    lista_arg  go to state 66


State 42

   49 cmd: IF . condicao THEN cmd pfalsa

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 64 (op_un)

    condicao   go to state 69
    expressao  go to state 70
    op_un      go to state 71
    termo      go to state 72


State 43

   46 cmd: READ . '(' variaveis ')'

    '('  shift, and go to state 73


State 44

   48 cmd: WHILE . '(' condicao ')' DO cmd

    '('  shift, and go to state 74


State 45

   47 cmd: WRITE . '(' variaveis ')'

    '('  shift, and go to state 75


State 46

   52 cmd: _BEGIN . comandos END

    FOR     shift, and go to state 40
    IDENT   shift, and go to state 41
    IF      shift, and go to state 42
    READ    shift, and go to state 43
    WHILE   shift, and go to state 44
    WRITE   shift, and go to state 45
    _BEGIN  shift, and go to state 46

    $default  reduce using rule 45 (comandos)

    comandos  go to state 76
    cmd       go to state 48


State 47

    7 corpo: dc error comandos . END

    END  shift, and go to state 77


State 48

   44 comandos: cmd . ';' comandos

    ';'  shift, and go to state 78


State 49

    6 corpo: dc _BEGIN comandos . END
    8      | dc _BEGIN comandos . error

    error  shift, and go to state 79
    END    shift, and go to state 80


State 50

   11 dc: dc_c error dc_p .

    $default  reduce using rule 11 (dc)


State 51

    9 dc: dc_c dc_v dc_p .

    $default  reduce using rule 9 (dc)


State 52

   26 mais_var: ',' . variaveis

    IDENT  shift, and go to state 33

    variaveis  go to state 81


State 53

   25 variaveis: IDENT mais_var .

    $default  reduce using rule 25 (variaveis)


State 54

   20 dc_v: VAR variaveis error . tipo_var ';' dc_v

    error    shift, and go to state 82
    INTEGER  shift, and go to state 83
    REAL     shift, and go to state 84

    tipo_var  go to state 85


State 55

   18 dc_v: VAR variaveis ':' . tipo_var ';' dc_v
   21     | VAR variaveis ':' . tipo_var error dc_v

    error    shift, and go to state 82
    INTEGER  shift, and go to state 83
    REAL     shift, and go to state 84

    tipo_var  go to state 86


State 56

   28 dc_p: PROCEDURE IDENT . parametros ';' corpo_p dc_p

    '('  shift, and go to state 87

    $default  reduce using rule 31 (parametros)

    parametros  go to state 88


State 57

   77 numero: NUMERO_INT .

    $default  reduce using rule 77 (numero)


State 58

   78 numero: NUMERO_REAL .

    $default  reduce using rule 78 (numero)


State 59

   14 dc_c: CONST error '=' numero . ';' dc_c

    ';'  shift, and go to state 89


State 60

   15 dc_c: CONST IDENT error numero . ';' dc_c

    ';'  shift, and go to state 90


State 61

   16 dc_c: CONST IDENT '=' error . ';' dc_c

    ';'  shift, and go to state 91


State 62

   12 dc_c: CONST IDENT '=' numero . ';' dc_c
   17     | CONST IDENT '=' numero . error dc_c

    error  shift, and go to state 92
    ';'    shift, and go to state 93


State 63

   53 cmd: FOR IDENT . SYMB_ASSIGN expressao TO expressao DO cmd

    SYMB_ASSIGN  shift, and go to state 94


State 64

   50 cmd: IDENT SYMB_ASSIGN . expressao

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 64 (op_un)

    expressao  go to state 95
    op_un      go to state 71
    termo      go to state 72


State 65

   37 lista_arg: '(' . argumentos ')'

    IDENT  shift, and go to state 96

    argumentos  go to state 97


State 66

   51 cmd: IDENT lista_arg .

    $default  reduce using rule 51 (cmd)


State 67

   62 op_un: '+' .

    $default  reduce using rule 62 (op_un)


State 68

   63 op_un: '-' .

    $default  reduce using rule 63 (op_un)


State 69

   49 cmd: IF condicao . THEN cmd pfalsa

    THEN  shift, and go to state 98


State 70

   54 condicao: expressao . relacao expressao

    OP_DIF  shift, and go to state 99
    OP_GE   shift, and go to state 100
    OP_LE   shift, and go to state 101
    '='     shift, and go to state 102
    '>'     shift, and go to state 103
    '<'     shift, and go to state 104

    relacao  go to state 105


State 71

   69 termo: op_un . fator mais_fatores

    IDENT        shift, and go to state 106
    NUMERO_INT   shift, and go to state 57
    NUMERO_REAL  shift, and go to state 58
    '('          shift, and go to state 107

    fator   go to state 108
    numero  go to state 109


State 72

   61 expressao: termo . outros_termos

    '+'  shift, and go to state 110
    '-'  shift, and go to state 111

    $default  reduce using rule 66 (outros_termos)

    outros_termos  go to state 112
    op_ad          go to state 113


State 73

   46 cmd: READ '(' . variaveis ')'

    IDENT  shift, and go to state 33

    variaveis  go to state 114


State 74

   48 cmd: WHILE '(' . condicao ')' DO cmd

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 64 (op_un)

    condicao   go to state 115
    expressao  go to state 70
    op_un      go to state 71
    termo      go to state 72


State 75

   47 cmd: WRITE '(' . variaveis ')'

    IDENT  shift, and go to state 33

    variaveis  go to state 116


State 76

   52 cmd: _BEGIN comandos . END

    END  shift, and go to state 117


State 77

    7 corpo: dc error comandos END .

    $default  reduce using rule 7 (corpo)


State 78

   44 comandos: cmd ';' . comandos

    FOR     shift, and go to state 40
    IDENT   shift, and go to state 41
    IF      shift, and go to state 42
    READ    shift, and go to state 43
    WHILE   shift, and go to state 44
    WRITE   shift, and go to state 45
    _BEGIN  shift, and go to state 46

    $default  reduce using rule 45 (comandos)

    comandos  go to state 118
    cmd       go to state 48


State 79

    8 corpo: dc _BEGIN comandos error .

    $default  reduce using rule 8 (corpo)


State 80

    6 corpo: dc _BEGIN comandos END .

    $default  reduce using rule 6 (corpo)


State 81

   26 mais_var: ',' variaveis .

    $default  reduce using rule 26 (mais_var)


State 82

   24 tipo_var: error .

    $default  reduce using rule 24 (tipo_var)


State 83

   23 tipo_var: INTEGER .

    $default  reduce using rule 23 (tipo_var)


State 84

   22 tipo_var: REAL .

    $default  reduce using rule 22 (tipo_var)


State 85

   20 dc_v: VAR variaveis error tipo_var . ';' dc_v

    ';'  shift, and go to state 119


State 86

   18 dc_v: VAR variaveis ':' tipo_var . ';' dc_v
   21     | VAR variaveis ':' tipo_var . error dc_v

    error  shift, and go to state 120
    ';'    shift, and go to state 121


State 87

   30 parametros: '(' . lista_par ')'

    IDENT  shift, and go to state 33

    variaveis  go to state 122
    lista_par  go to state 123


State 88

   28 dc_p: PROCEDURE IDENT parametros . ';' corpo_p dc_p

    ';'  shift, and go to state 124


State 89

   14 dc_c: CONST error '=' numero ';' . dc_c

    CONST  shift, and go to state 13

    $default  reduce using rule 13 (dc_c)

    dc_c  go to state 125


State 90

   15 dc_c: CONST IDENT error numero ';' . dc_c

    CONST  shift, and go to state 13

    $default  reduce using rule 13 (dc_c)

    dc_c  go to state 126


State 91

   16 dc_c: CONST IDENT '=' error ';' . dc_c

    CONST  shift, and go to state 13

    $default  reduce using rule 13 (dc_c)

    dc_c  go to state 127


State 92

   17 dc_c: CONST IDENT '=' numero error . dc_c

    CONST  shift, and go to state 13

    $default  reduce using rule 13 (dc_c)

    dc_c  go to state 128


State 93

   12 dc_c: CONST IDENT '=' numero ';' . dc_c

    CONST  shift, and go to state 13

    $default  reduce using rule 13 (dc_c)

    dc_c  go to state 129


State 94

   53 cmd: FOR IDENT SYMB_ASSIGN . expressao TO expressao DO cmd

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 64 (op_un)

    expressao  go to state 130
    op_un      go to state 71
    termo      go to state 72


State 95

   50 cmd: IDENT SYMB_ASSIGN expressao .

    $default  reduce using rule 50 (cmd)


State 96

   39 argumentos: IDENT . mais_ident

    ';'  shift, and go to state 131

    $default  reduce using rule 41 (mais_ident)

    mais_ident  go to state 132


State 97

   37 lista_arg: '(' argumentos . ')'

    ')'  shift, and go to state 133


State 98

   49 cmd: IF condicao THEN . cmd pfalsa

    FOR     shift, and go to state 40
    IDENT   shift, and go to state 41
    IF      shift, and go to state 42
    READ    shift, and go to state 43
    WHILE   shift, and go to state 44
    WRITE   shift, and go to state 45
    _BEGIN  shift, and go to state 46

    cmd  go to state 134


State 99

   56 relacao: OP_DIF .

    $default  reduce using rule 56 (relacao)


State 100

   57 relacao: OP_GE .

    $default  reduce using rule 57 (relacao)


State 101

   58 relacao: OP_LE .

    $default  reduce using rule 58 (relacao)


State 102

   55 relacao: '=' .

    $default  reduce using rule 55 (relacao)


State 103

   59 relacao: '>' .

    $default  reduce using rule 59 (relacao)


State 104

   60 relacao: '<' .

    $default  reduce using rule 60 (relacao)


State 105

   54 condicao: expressao relacao . expressao

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 64 (op_un)

    expressao  go to state 135
    op_un      go to state 71
    termo      go to state 72


State 106

   74 fator: IDENT .

    $default  reduce using rule 74 (fator)


State 107

   76 fator: '(' . expressao ')'

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 64 (op_un)

    expressao  go to state 136
    op_un      go to state 71
    termo      go to state 72


State 108

   69 termo: op_un fator . mais_fatores

    '*'  shift, and go to state 137
    '/'  shift, and go to state 138

    $default  reduce using rule 71 (mais_fatores)

    mais_fatores  go to state 139
    op_mul        go to state 140


State 109

   75 fator: numero .

    $default  reduce using rule 75 (fator)


State 110

   67 op_ad: '+' .

    $default  reduce using rule 67 (op_ad)


State 111

   68 op_ad: '-' .

    $default  reduce using rule 68 (op_ad)


State 112

   61 expressao: termo outros_termos .

    $default  reduce using rule 61 (expressao)


State 113

   65 outros_termos: op_ad . termo outros_termos

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 64 (op_un)

    op_un  go to state 71
    termo  go to state 141


State 114

   46 cmd: READ '(' variaveis . ')'

    ')'  shift, and go to state 142


State 115

   48 cmd: WHILE '(' condicao . ')' DO cmd

    ')'  shift, and go to state 143


State 116

   47 cmd: WRITE '(' variaveis . ')'

    ')'  shift, and go to state 144


State 117

   52 cmd: _BEGIN comandos END .

    $default  reduce using rule 52 (cmd)


State 118

   44 comandos: cmd ';' comandos .

    $default  reduce using rule 44 (comandos)


State 119

   20 dc_v: VAR variaveis error tipo_var ';' . dc_v

    VAR  shift, and go to state 20

    $default  reduce using rule 19 (dc_v)

    dc_v  go to state 145


State 120

   21 dc_v: VAR variaveis ':' tipo_var error . dc_v

    VAR  shift, and go to state 20

    $default  reduce using rule 19 (dc_v)

    dc_v  go to state 146


State 121

   18 dc_v: VAR variaveis ':' tipo_var ';' . dc_v

    VAR  shift, and go to state 20

    $default  reduce using rule 19 (dc_v)

    dc_v  go to state 147


State 122

   32 lista_par: variaveis . ':' tipo_var mais_par

    ':'  shift, and go to state 148


State 123

   30 parametros: '(' lista_par . ')'

    ')'  shift, and go to state 149


State 124

   28 dc_p: PROCEDURE IDENT parametros ';' . corpo_p dc_p

    VAR  shift, and go to state 20

    $default  reduce using rule 19 (dc_v)

    dc_v     go to state 150
    corpo_p  go to state 151
    dc_loc   go to state 152


State 125

   14 dc_c: CONST error '=' numero ';' dc_c .

    $default  reduce using rule 14 (dc_c)


State 126

   15 dc_c: CONST IDENT error numero ';' dc_c .

    $default  reduce using rule 15 (dc_c)


State 127

   16 dc_c: CONST IDENT '=' error ';' dc_c .

    $default  reduce using rule 16 (dc_c)


State 128

   17 dc_c: CONST IDENT '=' numero error dc_c .

    $default  reduce using rule 17 (dc_c)


State 129

   12 dc_c: CONST IDENT '=' numero ';' dc_c .

    $default  reduce using rule 12 (dc_c)


State 130

   53 cmd: FOR IDENT SYMB_ASSIGN expressao . TO expressao DO cmd

    TO  shift, and go to state 153


State 131

   40 mais_ident: ';' . argumentos

    IDENT  shift, and go to state 96

    argumentos  go to state 154


State 132

   39 argumentos: IDENT mais_ident .

    $default  reduce using rule 39 (argumentos)


State 133

   37 lista_arg: '(' argumentos ')' .

    $default  reduce using rule 37 (lista_arg)


State 134

   49 cmd: IF condicao THEN cmd . pfalsa

    ELSE  shift, and go to state 155

    ELSE      [reduce using rule 43 (pfalsa)]
    $default  reduce using rule 43 (pfalsa)

    pfalsa  go to state 156


State 135

   54 condicao: expressao relacao expressao .

    $default  reduce using rule 54 (condicao)


State 136

   76 fator: '(' expressao . ')'

    ')'  shift, and go to state 157


State 137

   72 op_mul: '*' .

    $default  reduce using rule 72 (op_mul)


State 138

   73 op_mul: '/' .

    $default  reduce using rule 73 (op_mul)


State 139

   69 termo: op_un fator mais_fatores .

    $default  reduce using rule 69 (termo)


State 140

   70 mais_fatores: op_mul . fator mais_fatores

    IDENT        shift, and go to state 106
    NUMERO_INT   shift, and go to state 57
    NUMERO_REAL  shift, and go to state 58
    '('          shift, and go to state 107

    fator   go to state 158
    numero  go to state 109


State 141

   65 outros_termos: op_ad termo . outros_termos

    '+'  shift, and go to state 110
    '-'  shift, and go to state 111

    $default  reduce using rule 66 (outros_termos)

    outros_termos  go to state 159
    op_ad          go to state 113


State 142

   46 cmd: READ '(' variaveis ')' .

    $default  reduce using rule 46 (cmd)


State 143

   48 cmd: WHILE '(' condicao ')' . DO cmd

    DO  shift, and go to state 160


State 144

   47 cmd: WRITE '(' variaveis ')' .

    $default  reduce using rule 47 (cmd)


State 145

   20 dc_v: VAR variaveis error tipo_var ';' dc_v .

    $default  reduce using rule 20 (dc_v)


State 146

   21 dc_v: VAR variaveis ':' tipo_var error dc_v .

    $default  reduce using rule 21 (dc_v)


State 147

   18 dc_v: VAR variaveis ':' tipo_var ';' dc_v .

    $default  reduce using rule 18 (dc_v)


State 148

   32 lista_par: variaveis ':' . tipo_var mais_par

    error    shift, and go to state 82
    INTEGER  shift, and go to state 83
    REAL     shift, and go to state 84

    tipo_var  go to state 161


State 149

   30 parametros: '(' lista_par ')' .

    $default  reduce using rule 30 (parametros)


State 150

   36 dc_loc: dc_v .

    $default  reduce using rule 36 (dc_loc)


State 151

   28 dc_p: PROCEDURE IDENT parametros ';' corpo_p . dc_p

    PROCEDURE  shift, and go to state 35

    $default  reduce using rule 29 (dc_p)

    dc_p  go to state 162


State 152

   35 corpo_p: dc_loc . _BEGIN comandos END ';'

    _BEGIN  shift, and go to state 163


State 153

   53 cmd: FOR IDENT SYMB_ASSIGN expressao TO . expressao DO cmd

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 64 (op_un)

    expressao  go to state 164
    op_un      go to state 71
    termo      go to state 72


State 154

   40 mais_ident: ';' argumentos .

    $default  reduce using rule 40 (mais_ident)


State 155

   42 pfalsa: ELSE . cmd

    FOR     shift, and go to state 40
    IDENT   shift, and go to state 41
    IF      shift, and go to state 42
    READ    shift, and go to state 43
    WHILE   shift, and go to state 44
    WRITE   shift, and go to state 45
    _BEGIN  shift, and go to state 46

    cmd  go to state 165


State 156

   49 cmd: IF condicao THEN cmd pfalsa .

    $default  reduce using rule 49 (cmd)


State 157

   76 fator: '(' expressao ')' .

    $default  reduce using rule 76 (fator)


State 158

   70 mais_fatores: op_mul fator . mais_fatores

    '*'  shift, and go to state 137
    '/'  shift, and go to state 138

    $default  reduce using rule 71 (mais_fatores)

    mais_fatores  go to state 166
    op_mul        go to state 140


State 159

   65 outros_termos: op_ad termo outros_termos .

    $default  reduce using rule 65 (outros_termos)


State 160

   48 cmd: WHILE '(' condicao ')' DO . cmd

    FOR     shift, and go to state 40
    IDENT   shift, and go to state 41
    IF      shift, and go to state 42
    READ    shift, and go to state 43
    WHILE   shift, and go to state 44
    WRITE   shift, and go to state 45
    _BEGIN  shift, and go to state 46

    cmd  go to state 167


State 161

   32 lista_par: variaveis ':' tipo_var . mais_par

    ';'  shift, and go to state 168

    $default  reduce using rule 34 (mais_par)

    mais_par  go to state 169


State 162

   28 dc_p: PROCEDURE IDENT parametros ';' corpo_p dc_p .

    $default  reduce using rule 28 (dc_p)


State 163

   35 corpo_p: dc_loc _BEGIN . comandos END ';'

    FOR     shift, and go to state 40
    IDENT   shift, and go to state 41
    IF      shift, and go to state 42
    READ    shift, and go to state 43
    WHILE   shift, and go to state 44
    WRITE   shift, and go to state 45
    _BEGIN  shift, and go to state 46

    $default  reduce using rule 45 (comandos)

    comandos  go to state 170
    cmd       go to state 48


State 164

   53 cmd: FOR IDENT SYMB_ASSIGN expressao TO expressao . DO cmd

    DO  shift, and go to state 171


State 165

   42 pfalsa: ELSE cmd .

    $default  reduce using rule 42 (pfalsa)


State 166

   70 mais_fatores: op_mul fator mais_fatores .

    $default  reduce using rule 70 (mais_fatores)


State 167

   48 cmd: WHILE '(' condicao ')' DO cmd .

    $default  reduce using rule 48 (cmd)


State 168

   33 mais_par: ';' . lista_par
